--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
 <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
 
-<title>UCD RNA-Seq</title>
+<title>UCD Bioinformatics Core RNA-Seq Workshop</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
