--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -136,7 +136,7 @@
 </body>
 
 
-<div id="main" style="padding-left: 150px; padding-right: 100px">
+<div id="main" style="padding-left: 150px; padding-right: 100px; margin-left: 400px">
 
 {{ content }}
 
