--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -107,7 +107,7 @@
             <div class="header-right">
 
                 <div id="mySidenav" class="sidenav">
-                  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                  <a href="javascript:void(0)" class="closebtn" onclick="doNav()">&times;</a>
 
                     <table>
                         {% for nav in site.navigation %}
@@ -125,7 +125,7 @@
                 </div>
 
                 <h1 style="display:flex;justify-content:space-between;background-color:white;margin:10">
-                    <div style="font-size:25px;cursor:pointer;margin:10;position:fixed;padding-top:20px" onclick="openNav()">&#9776; Menu</div>
+                    <div style="font-size:25px;cursor:pointer;margin:10;position:fixed;padding-top:20px" onclick="doNav()">&#9776; Menu</div>
                 </h1>
                     <div style="height: 5px; background-color: darkgrey"></div>
                     <div style="height: 5px"></div>
@@ -173,6 +173,20 @@ function closeNav() {
   document.getElementById("myHeader").style.marginLeft = "0";
 }
 
+var navopen=1;
+function doNav() {
+  if (navopen == 1) {
+    document.getElementById("mySidenav").style.width = "0px";
+    document.getElementById("main").style.marginLeft = "0px";
+    document.getElementById("myHeader").style.marginLeft = "0px";
+    navopen = 0;
+  } else {
+    document.getElementById("mySidenav").style.width = "400px";
+    document.getElementById("main").style.marginLeft = "400px";
+    document.getElementById("myHeader").style.marginLeft = "400px";
+    navopen = 1;
+  }
+}
 
 // When the user scrolls the page, execute myFunction
 window.onscroll = function() {myFunction()};
