--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,7 +99,7 @@
 </style>
 <body>
 
-    <div class="header sticky" id="myHeader" style="width:270px">
+    <div class="header sticky" id="myHeader">
       <a href="/" class="logo">
           <img src="{{ '/assets/img/biocore_banner.png' | relative_url }}">
           </img></a>
