--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,7 +99,7 @@
 </style>
 <body>
 
-    <div class="header sticky" id="myHeader" style="width:100%; top:0; position:fixed">
+    <div class="header sticky" id="myHeader" style="width:100%; top:0; position:fixed; padding-top:170px">
       <a href="/" class="logo">
           <img src="{{ '/assets/img/biocore_banner.png' | relative_url }}">
           </img></a>
