--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,7 +99,7 @@
 </style>
 <body>
 
-    <div class="header sticky" id="myHeader" style="width:100%; top:0; position:fixed; padding-top:170px">
+    <div class="header sticky" id="myHeader" style="width:100%; top:0; position:fixed">
       <a href="/" class="logo">
           <img src="{{ '/assets/img/biocore_banner.png' | relative_url }}">
           </img></a>
@@ -136,7 +136,7 @@
 </body>
 
 
-<div id="main" style="padding-left: 150px; padding-right: 100px; margin-left: 400px">
+<div id="main" style="padding-left: 150px; padding-right: 100px; margin-left: 400px; padding-top:170px">
 
 {{ content }}
 
