adding link to home

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,7 +100,7 @@
 <body>
 
     <div class="header sticky" id="myHeader" style="width:100%; top:0; position:fixed">
-      <a href="/" class="logo">
+      <a href="{{ site.github.url }}" class="logo">
           <img src="{{ '/assets/img/biocore_banner.png' | relative_url }}">
           </img></a>
             <h2 style="padding-left:10px; padding-top:10px">{{ site.title | default: site.github.repository_name }}</h2>
