--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -118,7 +118,7 @@
                             {% if nav.url contains "://" %}
                               <tr><th><a href="{{ nav.url }}" onclick="getOffset()">{{ nav.title }}</a></th></tr>
                             {% else %}
-                              <tr><th><a href="{{ nav.url | relative_url }}">{{ nav.title }}</a></th></tr>
+                              <tr><th><a href="{{ nav.url | relative_url }}" onclick="getOffset()">{{ nav.title }}</a></th></tr>
                             {% endif %}
                         {% endfor %}
                     </table>
