--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -190,7 +190,7 @@ function doNav() {
 
 // When the user scrolls the page, execute myFunction
 window.onscroll = function() {myFunction()};
-window.onload = function() {document.getElementById("mySidenav").scrollTop = scrollpos;}
+window.onload = function() {document.getElementById("mySidenav").scrollTop = 100;}
 
 // Get the header
 var header = document.getElementById("myHeader");
