--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -199,6 +199,7 @@ window.onload = function() {setScroll();}
 
 // Get the header
 var header = document.getElementById("myHeader");
+document.getElementById("mySidenav").onscroll = function() {console.log(document.getElementById("mySidenav").scrollTop);}
 
 // Get the offset position of the navbar
 var sticky = header.offsetTop;
