--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -197,11 +197,12 @@ function setScroll() {
 window.onscroll = function() {myFunction()};
 // window.onload = function() {setScroll();}
 
-window.onload = function() {console.log(document.getElementById("mySidenav").scrollTop);}
+var scrollpos;
+window.onload = function() {console.log(scrollpos);}
 
 // Get the header
 var header = document.getElementById("myHeader");
-document.getElementById("mySidenav").onscroll = function() {console.log(document.getElementById("mySidenav").scrollTop);}
+document.getElementById("mySidenav").onscroll = function() {scrollpos = document.getElementById("mySidenav").scrollTop;}
 
 // Get the offset position of the navbar
 var sticky = header.offsetTop;
