--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -117,9 +117,9 @@
                               {% continue %}
                             {% endif %}
                             {% if nav.url contains "://" %}
-                              <tr><th><a href="{{ nav.url }}">{{ nav.title }}</a></th></tr>
+                              <tr><th><a href="{{ nav.url }}" id="{{ i }}">{{ nav.title }}</a></th></tr>
                             {% else %}
-                              <tr><th><a href="{{ nav.url | relative_url }}">{{ nav.title }}</a></th></tr>
+                              <tr><th><a href="{{ nav.url | relative_url }}" id="{{ i }}">{{ nav.title }}</a></th></tr>
                             {% endif %}
                         {% endfor %}
                     </table>
