--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -116,7 +116,7 @@
                               {% continue %}
                             {% endif %}
                             {% if nav.url contains "://" %}
-                              <tr><th><a href="{{ nav.url }}?sp=scrollpos">{{ nav.title }}</a></th></tr>
+                              <tr><th><a href="{{ nav.url }}?sp=<script>scrollpos</script>">{{ nav.title }}</a></th></tr>
                             {% else %}
                               <tr><th><a href="{{ nav.url | relative_url }}?sp=scrollpos">{{ nav.title }}</a></th></tr>
                             {% endif %}
@@ -176,6 +176,8 @@ function doNav() {
 
 // When the user scrolls the page, execute myFunction
 window.onscroll = function() {myFunction()};
+var scrollpos=0;
+document.getElementById("mySidenav").onscroll = function() {scrollpos = document.getElementById("mySidenav").scrollTop;}
 
 // Get the header
 var header = document.getElementById("myHeader");
