--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -116,9 +116,9 @@
                               {% continue %}
                             {% endif %}
                             {% if nav.url contains "://" %}
-                              <tr><th><a href="{{ nav.url }}?sp=<script>scrollpos</script>">{{ nav.title }}</a></th></tr>
+                              <tr><th><a href="{{ nav.url }}">{{ nav.title }}</a></th></tr>
                             {% else %}
-                              <tr><th><a href="{{ nav.url | relative_url }}?sp=scrollpos">{{ nav.title }}</a></th></tr>
+                              <tr><th><a href="{{ nav.url | relative_url }}?sp=<script>scrollpos</script>">{{ nav.title }}</a></th></tr>
                             {% endif %}
                         {% endfor %}
                     </table>
