--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -118,7 +118,7 @@
                             {% if nav.url contains "://" %}
                               <tr><th><a href="{{ nav.url }}">{{ nav.title }}</a></th></tr>
                             {% else %}
-                              <tr><th><a href="{{ nav.url | relative_url }}?sp=<script>scrollpos</script>">{{ nav.title }}</a></th></tr>
+                              <tr><th><a href="{{ nav.url | relative_url }}">{{ nav.title }}</a></th></tr>
                             {% endif %}
                         {% endfor %}
                     </table>
@@ -176,8 +176,8 @@ function doNav() {
 
 // When the user scrolls the page, execute myFunction
 window.onscroll = function() {myFunction()};
-var scrollpos=0;
-document.getElementById("mySidenav").onscroll = function() {scrollpos = document.getElementById("mySidenav").scrollTop;}
+//var scrollpos=0;
+//document.getElementById("mySidenav").onscroll = function() {scrollpos = document.getElementById("mySidenav").scrollTop;}
 
 // Get the header
 var header = document.getElementById("myHeader");
