--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 
 <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="chrome=1">
-        <link rel="icon" type="image/png"  href="assets/img/favicon.png">
+        <link rel="icon" type="image/png"  href="{{ /assets/img/favicon.png | relative_url }}">
         <title>{{ site.title | default: site.github.repository_name }} by {{ site.github.owner_name }}</title>
 
         <link rel="stylesheet" href="{{ '/assets/css/styles.css?v=' | append: site.github.build_revision | relative_url }}">
