--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -60,7 +60,7 @@ a:hover small {
 }
 
 blockquote {
-  border-left:5px solid #e5e5e5;
+  border-left:5px solid #999999;
   margin:0;
   padding:0 0 0 20px;
   font-style:italic;
