--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,14 @@ body {
   font-weight:400;
 }
 
+.output {
+  border-left:5px solid #999999;
+  margin:40px 0px 20px 0px;
+  padding:0px 0px 0px 20px;
+  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
+  white-space: pre;
+}
+
 h1, h2, h3, h4, h5, h6 {
   color:#222;
   margin:0 0 20px;
