--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,6 +11,7 @@ body {
   padding:0px 0px 0px 20px;
   font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
   white-space: pre;
+  color: #222222;
 }
 
 h1, h2, h3, h4, h5, h6 {
