--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,15 @@ body {
   color: #333333;
 }
 
+.script {
+  margin:20px 0px 30px 0px;
+  padding:0px 0px 0px 20px;
+  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
+  white-space: pre;
+  color: black;
+}
+
+
 h1, h2, h3, h4, h5, h6 {
   color:#222;
   margin:0 0 20px;
