--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -127,7 +127,8 @@
                 <h2 style="display:flex;justify-content:space-between;background-color:white;margin:10">
                     <div style="font-size:22px;cursor:pointer;margin:10;position:fixed;padding-top:5px" onclick="doNav()">&#9776; Menu</div>
                 </h2>
-                    <div style="height: 5px; background-color: black"></div>
+                    <div style="height: 5px; background-color: darkgrey"></div>
+                    <div style="height: 5px"></div>
             </div>
     </div>
 
